turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:18: error: type mismatch;
 found   : Array[Int]
 required: Int
  mov= rule(state)(test)
                  ^