turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  var cou=getCouleurSol()
 	var mov=0
  var test =0
  for (i <- 0 to colors.length-1){
    if (cou==colors(i)){
      test = i
    }
  }
  setCouleurBrosse(colors((test+1)%(colors.length)))
 	baisseBrosse()
 	leveBrosse()
  println(rule(state)(test))
  mov= rule(state)(test)
  if (mov==1){
    avance()
  }
  if (mov==2) {
    gauche()
    avance()
  }
  if (mov ==4){
    retourne()
    avance()
  }
  if (mov==8){
    droite()
    avance()
  }
}

  
  